--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string name="reset_your_password">Enter your email to reset your password</string>
     <string name="log_in">Log in</string>
     <string name="scan_tickets">Scan Tickets</string>
+    <string name="home">Home</string>
 
 </resources>
