--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="email">E-mail</string>
     <string name="password">Password</string>
     <string name="enter_password">Enter password</string>
-    <string name="forget_password">Forget password?</string>
+    <string name="forget_password">Forgot password?</string>
     <string name="enter_your_email_to_reset_your_password">Enter your email to reset your password</string>
 
     <string name="request">Request</string>
